feat(duo): Implement real-time Duo Chat with voice messaging
This commit introduces a full-fledged, real-time chat feature within the Duo connected experience, enabling users to communicate via text and voice messages.

### Features

-   **Duo Chat UI**:
    -   Adds a new full-screen, Jetpack Compose-based chat interface (`DuoChatBottomSheet`) accessible from the Duo tab.
    -   Includes a modern chat bubble design (`ChatBubble.kt`) with support for message status indicators (Sending, Sent, Delivered, Read, Failed).
    -   Implements a real-time typing indicator (`TypingIndicator.kt`) to show when the partner is composing a message.
    -   Features a dynamic, matrix-style particle background (`ParticleBackground.kt`) for visual flair.

-   **Text & Voice Messaging**:
    -   Supports sending and receiving text messages with basic Markdown formatting (`MarkdownText.kt`).
    -   Integrates voice messaging functionality, including recording via the microphone, sending voice data, and a custom playback UI (`VoiceMessageContent`) within the chat bubble.
    -   Manages `RECORD_AUDIO` permission requests for voice recording.

-   **Chat Backend & Logic**:
    -   Establishes a `ChatRepository` to manage chat state, including sending/receiving messages and typing notifications over both WebRTC and Wi-Fi Direct connections.
    -   Updates `DuoViewModel` to handle chat state, unread message status, voice recording, and permission requests.
    -   Introduces new `DuoMessage` types for chat (`CHAT_MESSAGE`, `VOICE_MESSAGE`), typing status, and message acknowledgements (`MESSAGE_DELIVERED`, `MESSAGE_READ`).
    -   Adds an unread message indicator badge to the chat button on the Duo screen.

### Refinements & Bug Fixes

-   **Connection Quality Monitoring**:
    -   Implements connection quality monitoring for both WebRTC and Wi-Fi Direct.
    -   WebRTC quality is calculated based on round-trip time (RTT) and packet loss.
    -   Wi-Fi Direct quality is estimated via a 

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,12 @@
     <uses-permission android:name="android.permission.NEARBY_WIFI_DEVICES"
         android:usesPermissionFlags="neverForLocation"
         android:minSdkVersion="33"/>
+    
+    <!-- Vibration for notifications -->
+    <uses-permission android:name="android.permission.VIBRATE"/>
+    
+    <!-- Audio recording for voice messages -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
 
     <application
         android:allowBackup="true"
@@ -61,6 +67,13 @@
         <!-- Songs List Activity -->
         <activity
             android:name=".ui.activity.SongsListActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Music"
+            android:parentActivityName=".ui.activity.MainActivity"/>
+
+        <!-- Duo Songs List Activity -->
+        <activity
+            android:name=".duo.ui.activity.DuoSongsListActivity"
             android:exported="false"
             android:theme="@style/Theme.Music"
             android:parentActivityName=".ui.activity.MainActivity"/>
